# machine_learning_course_basics

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: local-setup.md  notebook-workflow.md  publishing-model.md  repository-overview.md  student-quickstart.md  tooling-guide.md
lectures/: README.md  index.yaml
lectures/lecture_01_eda/: README.md  lecture_notes.md  links.yaml
lectures/lecture_01_eda/assignment/: practice.ipynb
lectures/lecture_01_eda/lecture_examples/: README.md  example_01.ipynb  example_01.py  example_02.ipynb  example_02.py
lectures/lecture_02_data_preparation_part_1/: README.md  lecture_notes.md  links.yaml
lectures/lecture_02_data_preparation_part_1/assignment/: practice.ipynb
lectures/lecture_02_data_preparation_part_1/lecture_examples/: README.md  example_01.ipynb  example_01.py  example_02.ipynb  example_02.py  example_03.ipynb  example_03.py
lectures/lecture_03_data_preparation_part_2/: README.md  lecture_notes.md  links.yaml
lectures/lecture_03_data_preparation_part_2/assignment/: practice.ipynb
lectures/lecture_03_data_preparation_part_2/lecture_examples/: README.md  example_01.ipynb  example_01.py  example_02.ipynb  example_02.py  example_03.ipynb  example_03.py  example_04.ipynb  example_04.py  example_05.ipynb  example_05.py  example_06.ipynb  example_06.py
lectures/lecture_04_regression/: README.md  lecture_notes.md  links.yaml
lectures/lecture_04_regression/assignment/: practice.ipynb
lectures/lecture_04_regression/lecture_examples/: README.md  example_01.ipynb  example_01.py
lectures/lecture_05_classification_part_1/: README.md  lecture_notes.md  links.yaml
lectures/lecture_05_classification_part_1/assignment/: practice.ipynb
lectures/lecture_05_classification_part_1/lecture_examples/: README.md  example_01.ipynb  example_01.py  example_02.ipynb  example_02.py  example_03.ipynb  example_03.py
lectures/lecture_06_classification_part_2/: README.md  lecture_notes.md  links.yaml
lectures/lecture_06_classification_part_2/assignment/: practice.ipynb
lectures/lecture_06_classification_part_2/lecture_examples/: README.md  example_01.ipynb  example_01.py  example_02.ipynb  example_02.py  example_03.ipynb  example_03.py  example_04.ipynb  example_04.py
lectures/lecture_07_ensembles/: README.md  lecture_notes.md  links.yaml
lectures/lecture_07_ensembles/assignment/: practice.ipynb
lectures/lecture_08_time_series/: README.md  lecture_notes.md  links.yaml
lectures/lecture_09_clustering/: README.md  lecture_notes.md  links.yaml
lectures/lecture_10_explainability_interpretability/: README.md  lecture_notes.md  links.yaml
lectures/lecture_11_cross_validation_hpo/: README.md  lecture_notes.md  links.yaml
lectures/lecture_12_intro_neural_networks/: README.md  lecture_notes.md  links.yaml
lectures/lecture_13_responsible_ai/: README.md  lecture_notes.md  links.yaml
lectures/lecture_14_ml_in_production/: README.md  lecture_notes.md  links.yaml
publish/: lectures.yaml
src/mlcourse/: __init__.py  data.py  notebook.py  paths.py
tests/: test_smoke.py
tools/: check_notebook_environment.py  sync_lecture_examples.py
(+34 files in other folders)
