[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-course-authoring"
version = "0.1.0"
description = "Private authoring repository for the machine learning course."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "hatchling>=1.27.0",
  "ipykernel>=6.29.5",
  "jupyterlab>=4.4.0",
  "jupytext>=1.17.0",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
  "ty>=0.0.1a16",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/mlcourse"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.src]
include = ["src", "tests"]

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
