[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-course-authoring"
version = "0.1.0"
description = "Private authoring repository for the machine learning course."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
course = [
  "alibi>=0.9.6",
  "altair>=5.5.0",
  "bokeh>=3.7.0",
  "category-encoders>=2.8.1",
  "dtale>=3.17.0",
  "fairlearn>=0.12.0",
  "imbalanced-learn>=0.13.0",
  "interpret>=0.6.10",
  "joblib>=1.4.2",
  "lime>=0.2.0.1",
  "matplotlib>=3.9,<=3.10",
  "mlxtend>=0.23.4",
  "mord>=0.7",
  "nbformat>=5.10.4",
  "numpy>=1.26,<3",
  "openml>=0.15.1",
  "pandas>=2.2.3",
  "plotly>=6.0.1",
  "plotnine>=0.15.0",
  "requests>=2.32.3",
  "scikit-fuzzy>=0.5.0",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
  "seaborn>=0.13.2",
  "shap>=0.47.1",
  "statsmodels>=0.14.4",
  "sweetviz>=2.3.1",
  "ucimlrepo>=0.0.7",
  "umap-learn>=0.5.7",
  "ydata-profiling>=4.16.1",
]
ensembles = [
  "catboost>=1.2.8",
  "lightgbm>=4.6.0",
  "xgboost>=2.1.4",
]
time_series = [
  "prophet>=1.1.6",
  "xgboost>=2.1.4",
]
neural_networks = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]
hpo_automl = [
  "h2o>=3",
  "hyperopt>=0.2.7",
  "optuna>=4.2.1",
  "scikit-optimize>=0.10.2",
]
xai_piml = [
  "piml>=0.6.0.post2; python_version < '3.12'",
]
dev = [
  "hatchling>=1.27.0",
  "ipykernel>=6.29.5",
  "jupyterlab>=4.4.0",
  "jupytext>=1.17.0",
  "nbformat>=5.10.4",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
  "ty>=0.0.1a16",
]

[tool.uv]
default-groups = ["course", "dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/mlcourse"]

[tool.ruff]
exclude = [
  "*.ipynb",
  "legacy_import",
  "lectures/**/lecture_examples/*.py",
]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.src]
include = ["src", "tests"]

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
